taskcar-motor-driver/build/log/idf_py_stdout_output_15087
[1/14] Building C object esp-idf/esp_app_format/CMakeFiles/__idf_esp_app_format.dir/esp_app_desc.c.obj
[2/14] Linking C static library esp-idf/esp_app_format/libesp_app_format.a
[3/14] Performing build step for 'bootloader'
[1/1] cd /home/joagz/taskcar-oficial/taskcar-motor-driver/build/bootloader/esp-idf/esptool_py && /home/joagz/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/joagz/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/joagz/taskcar-oficial/taskcar-motor-driver/build/bootloader/bootloader.bin
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[4/14] No install step for 'bootloader'
[5/14] Completed 'bootloader'
[6/14] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[7/14] Building C object esp-idf/imu_driver/CMakeFiles/__idf_imu_driver.dir/mpu6050.c.obj
FAILED: esp-idf/imu_driver/CMakeFiles/__idf_imu_driver.dir/mpu6050.c.obj 
/home/joagz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/joagz/taskcar-oficial/taskcar-motor-driver/build/config -I/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver -I/home/joagz/esp/esp-idf/components/newlib/platform_include -I/home/joagz/esp/esp-idf/components/freertos/config/include -I/home/joagz/esp/esp-idf/components/freertos/config/include/freertos -I/home/joagz/esp/esp-idf/components/freertos/config/xtensa/include -I/home/joagz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/joagz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/joagz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/joagz/esp/esp-idf/components/freertos/esp_additions/include -I/home/joagz/esp/esp-idf/components/esp_hw_support/include -I/home/joagz/esp/esp-idf/components/esp_hw_support/include/soc -I/home/joagz/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/joagz/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/joagz/esp/esp-idf/components/heap/include -I/home/joagz/esp/esp-idf/components/log/include -I/home/joagz/esp/esp-idf/components/soc/include -I/home/joagz/esp/esp-idf/components/soc/esp32 -I/home/joagz/esp/esp-idf/components/soc/esp32/include -I/home/joagz/esp/esp-idf/components/hal/platform_port/include -I/home/joagz/esp/esp-idf/components/hal/esp32/include -I/home/joagz/esp/esp-idf/components/hal/include -I/home/joagz/esp/esp-idf/components/esp_rom/include -I/home/joagz/esp/esp-idf/components/esp_rom/include/esp32 -I/home/joagz/esp/esp-idf/components/esp_rom/esp32 -I/home/joagz/esp/esp-idf/components/esp_common/include -I/home/joagz/esp/esp-idf/components/esp_system/include -I/home/joagz/esp/esp-idf/components/esp_system/port/soc -I/home/joagz/esp/esp-idf/components/esp_system/port/include/private -I/home/joagz/esp/esp-idf/components/xtensa/esp32/include -I/home/joagz/esp/esp-idf/components/xtensa/include -I/home/joagz/esp/esp-idf/components/xtensa/deprecated_include -I/home/joagz/esp/esp-idf/components/lwip/include -I/home/joagz/esp/esp-idf/components/lwip/include/apps -I/home/joagz/esp/esp-idf/components/lwip/include/apps/sntp -I/home/joagz/esp/esp-idf/components/lwip/lwip/src/include -I/home/joagz/esp/esp-idf/components/lwip/port/include -I/home/joagz/esp/esp-idf/components/lwip/port/freertos/include -I/home/joagz/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/joagz/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/joagz/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/joagz/esp/esp-idf/components/driver/include -I/home/joagz/esp/esp-idf/components/driver/deprecated -I/home/joagz/esp/esp-idf/components/driver/analog_comparator/include -I/home/joagz/esp/esp-idf/components/driver/dac/include -I/home/joagz/esp/esp-idf/components/driver/gpio/include -I/home/joagz/esp/esp-idf/components/driver/gptimer/include -I/home/joagz/esp/esp-idf/components/driver/i2c/include -I/home/joagz/esp/esp-idf/components/driver/i2s/include -I/home/joagz/esp/esp-idf/components/driver/ledc/include -I/home/joagz/esp/esp-idf/components/driver/mcpwm/include -I/home/joagz/esp/esp-idf/components/driver/parlio/include -I/home/joagz/esp/esp-idf/components/driver/pcnt/include -I/home/joagz/esp/esp-idf/components/driver/rmt/include -I/home/joagz/esp/esp-idf/components/driver/sdio_slave/include -I/home/joagz/esp/esp-idf/components/driver/sdmmc/include -I/home/joagz/esp/esp-idf/components/driver/sigma_delta/include -I/home/joagz/esp/esp-idf/components/driver/spi/include -I/home/joagz/esp/esp-idf/components/driver/temperature_sensor/include -I/home/joagz/esp/esp-idf/components/driver/touch_sensor/include -I/home/joagz/esp/esp-idf/components/driver/twai/include -I/home/joagz/esp/esp-idf/components/driver/uart/include -I/home/joagz/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/joagz/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/joagz/esp/esp-idf/components/esp_pm/include -I/home/joagz/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/joagz/taskcar-oficial/taskcar-motor-driver=. -fmacro-prefix-map=/home/joagz/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/imu_driver/CMakeFiles/__idf_imu_driver.dir/mpu6050.c.obj -MF esp-idf/imu_driver/CMakeFiles/__idf_imu_driver.dir/mpu6050.c.obj.d -o esp-idf/imu_driver/CMakeFiles/__idf_imu_driver.dir/mpu6050.c.obj -c /home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c: In function 'write_i2c':
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c:23:9: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   23 |         return;
      |         ^~~~~~
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c:20:11: note: declared here
   20 | esp_err_t write_i2c(uint8_t data[2], uint8_t address)
      |           ^~~~~~~~~
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c:26:9: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   26 |         return;
      |         ^~~~~~
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c:20:11: note: declared here
   20 | esp_err_t write_i2c(uint8_t data[2], uint8_t address)
      |           ^~~~~~~~~
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c: In function 'get_GFS_SEL':
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c:70:5: warning: case label value exceeds maximum value for type [-Wswitch-outside-range]
   70 |     case MPU6050_GYRO_500:
      |     ^~~~
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c:73:5: warning: case label value exceeds maximum value for type [-Wswitch-outside-range]
   73 |     case MPU6050_GYRO_1000:
      |     ^~~~
/home/joagz/taskcar-oficial/taskcar-motor-driver/main/components/imu_driver/mpu6050.c:76:5: warning: case label value exceeds maximum value for type [-Wswitch-outside-range]
   76 |     case MPU6050_GYRO_2000:
      |     ^~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
